# ArtificialGeneNets

./: CMakeLists.txt  README.md
configs/: config.json  config2.json
expts/: run.sh  test.sh
heatmaps/: analyse.py  heatmaps.py  netff.py  run.sh  test.sh
heatmaps/expt1/: outputs.h5  weights.h5
heatmaps/expt2/: inputs.h5  log.txt  outputs.h5  weights.h5
heatmaps/expt3/: network.h5  outputs.h5  weights.h5
mapIndMat/: analyse.py  config.json  conns.py  highres.py  inputs.h5  netspec.py  network.h5  run.py  run.sh  test.sh
mapValMat/: config.json  conns.py  heatmaps.py  inputs.h5  netspec.py  network.h5  run.py  run.sh  test.sh
mapValMat/images/: case_19_50_P36_pup_sighted_control.csv
maps/: csv_map.py
model/: conns.py  constructmaps.py  runAreas.py  runMaps.py  summary.h5  test.json
model/configs/: configEnucleateOriginal.json
model/data/expt0/: network.h5  outputs.h5  weights.h5
model/data/expt1/: log.txt  network.h5  outputs.h5  weights.h5
model/data/expt2/: network.h5  outputs.h5  weights.h5
model/images/hmaps/: case_19_18_P36_pup_enucleated_at_P4.csv
model/maps/: enucleate.h5  sighted.h5
models/: M_GreigRandCull.py  M_HmapRandCull.py  M_enucleate.py  M_greig.py  M_rakic.py  M_test.py  M_ucd.py  evolve.py  model_1.py  networks.py  tools.py
models/analysis/: analyse2.py  fig.py  getErrs.py  makeFigure.py  summary.py
models/configs/: config1out1ctxt.json  config2out1ctxt.json  configRakic.json  png_map.py  testmaps.json  ucd.sh  ucd_maps.py
models/configs/maps/csv/: sighted.h5
models/configs/maps/rakic/: 10_EphA7.h5  11_EphrinA5.h5  12_Etv1.h5  13_Fgf15.h5  14_Fgf17.h5  15_Fgf8.h5  16_Foxg1.h5  17_Is2.h5  18_Lhx2.h5  19_Lmo3.h5  1_BMPs.h5  20_Lmo4.h5  20_Nt3.h5  21_Otx2.h5  22_P75.h5  23_Pax6.h5  24_RORbeta.h5  25_SCIP.h5  26_sfrps.h5  27_Sp5.h5  28_Sp8.h5  29_Tbr1.h5  2_Cadherin2.h5  30_Wnts.h5  3_Cadherin6.h5  4_Cadherin8.h5  5_Clim1a.h5  6_Couptf1.h5  7_EGFs.h5  8_Emx2.h5  9_EphA2.h5
models/configs/maps/ucd/: 17_280_id2_c.h5  17_280_rzrb_c.h5  17_290_c.h5  17_291_c.h5  17_292_c.h5  17_294_c.h5  17_295_c.h5  17_299_c.h5  18_148_id2_c.h5  18_148_rzrb_c.h5  18_159_c.h5  18_160_c.h5  19_18_c.h5  19_46_c.h5  19_47_c.h5  19_50_c.h5
models/data/: summary.h5
models/data/expt0/: log.txt  map1.h5  map3.h5  outputs.h5  weights.h5
models/data/expt1/: log.txt  network.h5  outputs.h5  weights.h5
models/data/expt10/: log.txt  network.h5  outputs.h5  weights.h5
models/data/expt11/: config.json  log.txt  map2.h5  network.h5  outputs.h5  weights.h5
models/data/expt12/: log.txt  network.h5  outputs.h5  weights.h5
models/data/expt13/: log.txt  network.h5  outputs.h5  weights.h5
models/data/expt14/: log.txt  network.h5  outputs.h5  weights.h5
models/data/expt15/: log.txt  network.h5  outputs.h5  weights.h5
models/data/expt16/: log.txt  network.h5  outputs.h5  weights.h5
models/data/expt17/: log.txt  network.h5  outputs.h5  weights.h5
models/data/expt18/: log.txt  network.h5  outputs.h5  weights.h5
models/data/expt19/: log.txt  network.h5  outputs.h5  weights.h5
models/data/expt2/: log.txt  outputs.h5  weights.h5
models/data/expt3/: log.txt  network.h5  outputs.h5  weights.h5
models/data/expt4/: log.txt  network.h5  outputs.h5  weights.h5
models/data/expt5/: log.txt  map0.h5  network.h5  outputs.h5  weights.h5
models/data/expt6/: log.txt  network.h5  outputs.h5  weights.h5
models/data/expt7/: log.txt  network.h5  outputs.h5  weights.h5
models/data/expt8/: log.txt  network.h5  outputs.h5  weights.h5
models/data/expt9/: log.txt  network.h5  outputs.h5  weights.h5
models/other/: M_enucleate.py  M_test.py  M_ucd.py  M_ucd2.py  M_ucd3.py  M_ucdCp.py  tools.py
pyscripts/: analyse.py  highres.py  netff.py
sim/: CMakeLists.txt  Nets.h  Pineda.h  PinedaHyb.h  PinedaMatrix.h  greig.cpp  heatmaps.cpp  hmap.cpp  model.cpp  model2.cpp  tools.h
src/: CMakeLists.txt  Nets.h  NetsVis.h  Pineda.h  greig.cpp  model.cpp  modelVis.cpp  plotMaps.cpp  tools.h
src/dev/: NetsPreVis.h
